# Imageanalysis

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
cellscope/: __init__.py  __main__.py  analyze.py  app.py  batch.py  colors.py  config.py  downsample.py  export.py  provenance.py  qc.py  render.py  state.py  stats.py  subpop.py  theme.py  xlsx_report.py
cellscope/analysis/: __init__.py  engines.py  pipeline.py  quantify.py  segmentation.py  tracking.py
cellscope/data/: __init__.py  cephla_loader.py  folder_loader.py  loader.py  mock.py
cellscope/views/: __init__.py  cells_view.py  platemap_view.py  results_view.py  viewer_view.py  wells_view.py
cellscope/widgets/: __init__.py  canvas.py  chart.py  controls.py  icons.py  sheet.py  tab_bar.py  worker.py
scripts/: benchmark_position.py  capture.py  capture_dataset.py  capture_platemap.py  capture_real.py  capture_ruler.py  compare_downsample.py  fog_plot.py  measure_638.py  measure_classroom.py  measure_object_size.py  probe_dataset.py  render_cephla_frame.py  render_cephla_thumbs.py
tests/: test_analysis.py  test_batch.py  test_cephla_loader.py  test_downsample.py  test_engines.py  test_folder_loader.py  test_smoke.py
