[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cellscope"
version = "0.1.0"
description = "CellScope - a phone-style desktop app for tracking and quantifying cells across a time course, for non-programmer biologists."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "CellScope" }]
dependencies = [
    "PySide6>=6.6",
    "numpy>=1.24",
    "scipy>=1.10",
    "tifffile>=2023.7",
    "Pillow>=10.0",
]

[project.optional-dependencies]
# GPU deep-learning segmentation. Install on a machine with an NVIDIA GPU, and
# install a CUDA build of torch first (see https://pytorch.org):
#   pip install "cellscope[cellpose]"
cellpose = ["cellpose>=4.0"]
# Fixed-schema parquet output for cellscope-batch --format parquet:
#   pip install "cellscope[parquet]"
parquet = ["pyarrow>=14"]
# Automated subpopulation analysis report (cellscope-analyze / --analyze) and
# the plotting scripts:
#   pip install "cellscope[analysis]"
analysis = ["pandas>=2.0", "matplotlib>=3.7", "pyarrow>=14"]

[project.scripts]
cellscope = "cellscope.app:main"
cellscope-batch = "cellscope.batch:main"
cellscope-downsample = "cellscope.downsample:main"
cellscope-analyze = "cellscope.analyze:main"

[tool.setuptools.packages.find]
include = ["cellscope*"]
